<resources>
    <string name="app_name">Test</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="select_work_experience">Select Work Experience</string>
    <string name="select_branch">Select Work Experience</string>

    <string name="employee_info">Employee Info</string>
    <string name="employee_no">Employee No</string>
    <string name="employee_name">Employee Name</string>
    <string name="designation">Designation</string>
    <string name="personal_info">Personal Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="selected_date">Selected Date:</string>
    <string name="submit">Submit</string>
    <string name="bank_info">Bank Info</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_no">Account No</string>
    <string name="ifsc_code">IFSC Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>