<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EmployeeInfo"
    android:orientation="vertical"
    android:background="?android:windowBackground">

    <TextView
        android:text="@string/personal_info"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/edit_first_name"
        android:hint="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/edit_last_name"
        android:hint="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/edit_phone_number"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"/>


    <RadioGroup
        android:id="@+id/radio_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <RadioButton
            android:id="@+id/radio_male"
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/radio_female"
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/radio_other"
            android:text="@string/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/text_selected_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:id="@+id/button_select_date"
            android:src="@drawable/ic_calendar"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

    </LinearLayout>



    <Button
        android:id="@+id/btn_personal_info_submit"
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"/>


</LinearLayout>