<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Details"
    android:background="?android:windowBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@id/btn_edit"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_edit" />


        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/detail_profile"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_person"
            android:layout_below="@+id/btn_edit"/>

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_profile"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_marginBottom="15dp"
            android:padding="15dp"
            android:hint="Full Name" />


        <EditText
            android:id="@+id/detail_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_profile"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_marginBottom="15dp"
            android:padding="15dp"
            android:hint="Full Name"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/detail_name"
            android:id="@+id/lin1">

            <TextView
                android:id="@+id/detail_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:hint="Phone Number"/>

            <EditText
                android:id="@+id/detail_edit_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:hint="Phone Number"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date_of_birth"
                android:layout_weight="1"
                android:padding="15dp"
                android:hint="Date of Birth"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_edit_date_of_birth"
                android:layout_weight="1"
                android:padding="15dp"
                android:hint="Date of Birth"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/lin1"
            android:id="@+id/lin2">

            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:hint="Gender"/>

            <EditText
                android:id="@+id/edit_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:hint="Gender"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/age"
                android:layout_weight="1"
                android:padding="15dp"
                android:hint="Age"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_age"
                android:layout_weight="1"
                android:padding="15dp"
                android:hint="Age"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lin2"
            android:id="@+id/lin3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_employee_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/employee_no"
                android:padding="15dp"/>

            <EditText
                android:id="@+id/edit_detail_employee_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/employee_no"
                android:padding="15dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/detail_employee_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/employee_name"
                android:padding="15dp"/>

            <EditText
                android:id="@+id/edit_detail_employee_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/employee_name"
                android:padding="15dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/detail_designation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/designation"
                android:padding="15dp"/>


            <EditText
                android:id="@+id/edit_detail_designation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/designation"
                android:padding="15dp"
                android:visibility="gone"/>


            <TextView
                android:id="@+id/details_account_tye"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Account Type"
                android:padding="15dp"/>

            <EditText
                android:id="@+id/edit_details_account_tye"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Account Type"
                android:padding="15dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/details_experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Experience"
                android:padding="15dp"/>

            <EditText
                android:id="@+id/edit_details_experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Experience"
                android:padding="15dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/detail_bank_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bank_name"
                android:padding="15dp"/>

            <EditText
                android:id="@+id/edit_detail_bank_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bank_name"
                android:padding="15dp"
                android:visibility="gone"/>


            <TextView
                android:id="@+id/detail_branch_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Branch Name"
                android:padding="15dp"/>

            <EditText
                android:id="@+id/edit_detail_branch_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Branch Name"
                android:padding="15dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/detail_bank_account_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_no"
                android:padding="15dp"/>

            <EditText
                android:id="@+id/edit_detail_bank_account_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_no"
                android:padding="15dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/detail_ifsc_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ifsc_code"
                android:padding="15dp"/>

            <EditText
                android:id="@+id/edit_detail_ifsc_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ifsc_code"
                android:padding="15dp"
                android:visibility="gone"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update Details"
            android:layout_below="@id/lin3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:id="@+id/update_details"
            android:visibility="gone"/>


    </RelativeLayout>
</ScrollView>